@@ -39,7 +39,7 @@
 
 #include "libs/Module.h"
 #include "libs/fvwmlib.h"
-#include <fvwm/fvwm.h>
+#include "fvwm/fvwm.h"
 #include "libs/vpacket.h"
 #include "libs/Parse.h"
 #include "libs/Strings.h"
