@@ -1,6 +1,6 @@
 /* -*-c-*- */
 #include "libs/fvwmlib.h"
-#include <fvwm/fvwm.h>
+#include "fvwm/fvwm.h"
 #include "libs/vpacket.h"
 
 struct list
